# say-hello-python

./: README.md  pyproject.toml
hello/: __init__.py
hello/scripts/: say_hello.py
