[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["John Dorean <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
urllib3 = "==1.26.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:say_hello"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
